# ChangeLog for media-libs/mesa
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.243 2009/12/13 21:11:30 scarabeus Exp $

  13 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org> -mesa-7.1.ebuild,
  -mesa-7.2.ebuild, -mesa-7.4.4.ebuild:
  rm

*mesa-7.7_rc2 (13 Dec 2009)
*mesa-7.6.1_rc3 (13 Dec 2009)

  13 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  +mesa-7.6.1_rc3.ebuild, +mesa-7.7_rc2.ebuild, metadata.xml:
  Bump to latest rcs.

  10 Dec 2009; Christian Faulhammer <fauli@gentoo.org> mesa-7.5.2.ebuild:
  x86 stable, bug 294958

  10 Dec 2009; Samuli Suominen <ssuominen@gentoo.org> mesa-7.5.2.ebuild:
  amd64 stable wrt #294958

  22 Nov 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/6.5.2-i965-wine-fix.patch:
  Drop stale patches.

  26 Oct 2009; Jeroen Roovers <jer@gentoo.org> mesa-7.5.1.ebuild:
  Stable for HPPA (bug #282290).

  11 Oct 2009; nixnut <nixnut@gentoo.org> mesa-7.5.1.ebuild:
  ppc stable #282290

  09 Oct 2009; Markus Meier <maekke@gentoo.org> mesa-7.5.1.ebuild:
  arm stable, bug #282290

  05 Oct 2009; Christian Faulhammer <fauli@gentoo.org> mesa-7.5.1.ebuild:
  x86 stable, bug 282290

  30 Sep 2009; Samuli Suominen <ssuominen@gentoo.org> mesa-7.5.1.ebuild:
  amd64 stable wrt #282290

*mesa-7.5.2 (29 Sep 2009)

  29 Sep 2009; Tomáš Chvátal <scarabeus@gentoo.org> -mesa-7.5-r2.ebuild,
  -mesa-7.5-r3.ebuild, +mesa-7.5.2.ebuild:
  Version bump. Remove old.

  21 Sep 2009; Tomáš Chvátal <scarabeus@gentoo.org> mesa-7.1.ebuild,
  mesa-7.2.ebuild, mesa-7.3-r1.ebuild, mesa-7.4.4.ebuild,
  mesa-7.5-r2.ebuild, mesa-7.5-r3.ebuild, mesa-7.5.1.ebuild:
  Remove doc dependency on opengl-manpages. Since they are going to die.

  19 Sep 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -mesa-6.5.2-r1.ebuild, -mesa-7.0.3.ebuild:
  Cleanup. Removal of old xorg versions.

*mesa-7.5.1 (04 Sep 2009)

  04 Sep 2009; Rémi Cardona <remi@gentoo.org> +mesa-7.5.1.ebuild:
  bump to 7.5.1
