@@ -10,6 +10,6 @@ EBUILD mesa-7.3-r1.ebuild 7192 RMD160 d6f4edf54d596b96bade8e3141b10d660afa83a1 S
 EBUILD mesa-7.5.1.ebuild 7692 RMD160 85f65bc1dede9fd92950dfb70bcb8e3d14bdf99b SHA1 9b32e4cde6a36fa9195f5ae3847c474c78706fb3 SHA256 c9a40b43362759556ef191c7500a81ae511006987251b058c706c71f49d8e5a8
 EBUILD mesa-7.5.2.ebuild 7697 RMD160 21532043c7a254beb49ff6aed46135f81899ea38 SHA1 d8e689ebf68e239cef13655fd42b572aee037608 SHA256 45a2eb5295d47e89e600d0b34df6adb2ef2b0182fe19a35906406a4bac3498dd
 EBUILD mesa-7.6.1_rc3.ebuild 6414 RMD160 9d0f656efbbe1807ce30bc3b53023c7038201cde SHA1 e0aca42ae8293787237ccfbce409d059affdee60 SHA256 b2a49f76ff9e7e7997f1bf518232b75b5bd3c36b2e8f4e2b208825e14e8a63bd
-EBUILD mesa-7.7_rc2.ebuild 6412 RMD160 156a0f2d331d6afa3e50e5ef663fc1d8cfa56b89 SHA1 d479f7fb9a4a5706c4c2c311b92869d4f44b3e4e SHA256 22d28dd1f54e32d957928a3fb3ba54f86e84b71f2937ce52367f0c17811e8bdd
-MISC ChangeLog 43519 RMD160 bf585c5a20193ff6c16c71046c732839724629bb SHA1 c128d56bf9e498bc47315b023d59288a2ab30133 SHA256 e7c725bb5cc36ee0b1871a42dde0c1a4a0c1caf35d05cf30dd9d7d72d8f9cb5f
+EBUILD mesa-7.7_rc2.ebuild 6288 RMD160 b9fe7e9f4d2a3ad16d7f140ed1c043b32879123a SHA1 bd6c0c0b4946d45c851551a59b9533f0c30289e8 SHA256 ee3fa840d418f54dc060ee60b56c7b51883b438032020aebad3525ea24317c79
+MISC ChangeLog 43622 RMD160 c649eb8b9e6f5be43253d18a35080eede689f98d SHA1 e5e2ed8091457d2cc5e4cdf8502d0194395f18a2 SHA256 614e75adfea9fc54bf6d46da83eebccee95b1081c182d742b1572c32069e802c
 MISC metadata.xml 344 RMD160 2a7cf045329a3141e5ae1396b497ca0e98a1888b SHA1 b730806d6fa2db3bada9e66dd6b93b9e40d6dfea SHA256 849997a7912f4428382a3bdc6b6b6bdb2928048a274fa865b3c89cd3e89e6dde
