@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/mesa
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.243 2009/12/13 21:11:30 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.244 2009/12/14 17:39:15 scarabeus Exp $
+
+  14 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org> mesa-7.7_rc2.ebuild:
+  Drop unused video cards
 
   13 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org> -mesa-7.1.ebuild,
   -mesa-7.2.ebuild, -mesa-7.4.4.ebuild:
